--- a/index.html
+++ b/index.html
@@ -1,52 +1,52 @@
 ---
 
-title: Landing Page
+title: The 14th Cross-Strait Workshop on
+title2: “Nano Science and Technology”
 layout: landing
 ---
- 
+
 <!-- Main -->
 	<div id="main" class="wrapper style1">
 		<section class="container">
 			<header class="major">
-				<h2>Nulla luctus eleifend</h2>
-				<span class="byline">Mauris vulputate dolor sit amet nibh</span>
+				<h2>General Information</h2>
 			</header>
-			<div class="row">
+      <p>The 14th Cross-Strait Workshop on "Nano Science and Technology"
+      (CSWNST11) will be held at University of Macau from 21-24 June 2017. </p>
 
-				<!-- Content -->
-					<div class="6u">
-						<section>
-							<ul class="style">
-								<li>
-									<span class="fa fa-wrench"></span>
-									<h3>Integer ultrices</h3>
-									<span>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim.</span>
-								</li>
-								<li>
-									<span class="fa fa-cloud"></span>
-									<h3>Aliquam luctus</h3>
-									<span>Pellentesque viverra vulputate enim. Aliquam erat volutpat. Maecenas condimentum enim tincidunt risus accumsan.</span>
-								</li>
-							</ul>
-						</section>
-					</div>
-					<div class="6u">
-						<section>
-							<ul class="style">
-								<li>
-									<span class="fa fa-cogs"></span>
-									<h3>Integer ultrices</h3>
-									<span>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim.</span>
-								</li>
-								<li>
-									<span class="fa fa-leaf"></span>
-									<h3>Aliquam luctus</h3>
-									<span>Pellentesque viverra vulputate enim. Aliquam erat volutpat. Maecenas condimentum enim tincidunt risus accumsan.</span>
-								</li>
-							</ul>
-						</section>
-					</div>
+      <p>Cross-Strait Workshop on "Nano Science and Technology" is a yearly
+      international conference on Nano Science and Technology, which is highly
+      admired and held in turn among Mainland China, Hong Kong and Taiwan.
+      This is the first time that Macau will join the big group and hold the 14th conference.</p>
 
-			</div>
+      <p>The program will include oral and poster sessions on the areas of
+      Electronic Materials, Energy and Environment Materials, Bio-Materials,
+      Advanced Functional Materials, Advanced Structure Materials, etc. </p>
+
+		</section>
+	</div>
+
+	<div class="wrapper style2">
+		<section class="container">
+			<header class="major">
+				<h2>Important days</h2>
+			</header>
+      <h3>15 April 2017</h3>
+      <p>Abstract Submission Deadline</p>
+      <h3>30 April 2017</h3>
+      <p>Registration Deadline</p>
+      <h3>21 June 2017</h3>
+      <p>Conference Check-in</p>
+      <h3>22-24 June 2017</h3>
+      <p>Conference</p>
+		</section>
+	</div>
+
+	<div class="wrapper style1">
+		<section class="container">
+			<header class="major">
+				<h2>Keynote Speakers</h2>
+			</header>
+      <p>To be determined</p>
 		</section>
 	</div>
