--- a/registration.html
+++ b/registration.html
@@ -19,6 +19,7 @@ layout: main
 
         <h3>Payment</h3>
         <p>We accept bank transfer to the following bank account:
-        <img width="100%" src="{{ site.baseurl }}/assets/images/payment.png" alt="">
+        <br/>
+        <img style="max-width:600px" src="{{ site.baseurl }}/assets/images/payment.png" alt="">
       </section>
     </div>
