--- a/submission.html
+++ b/submission.html
@@ -9,17 +9,12 @@ layout: main
     <div class="wrapper style2">
       <section class="container">
         <header class="major">
-          <h2>Abstract Submission</h2>
+          <h2>Submission</h2>
         </header>
-        <p>Please fill in the <a href="javascript:;">abstract submission form</a>.
-      </section>
-    </div>
-
-    <div class="wrapper style1">
-      <section class="container">
-        <header class="major">
-          <h2>Poster Size</h2>
-        </header>
+        <h3>Abstract Submission</h3>
+        <p>Please download the Abstract Template and send it back to <a href="mailto:CSWNST14@umac.mo">CSWNST14@umac.mo</a>
+        <p><a href="{{ site.baseurl }}/assets/download/abstract_template.pdf">Click to download</a>
+        <h3>Poster Size</h3>
         <p>The poster size is 120 cm (vertical) by 90 cm (horizental).
       </section>
     </div>
