--- a/program.html
+++ b/program.html
@@ -53,7 +53,7 @@
         <header class="major">
           <h2>Tentative Schedule</h2>
         </header>
-        <img width="100%" src="/CSWNST14/assets/images/sche.png" alt="">
+        <img style="max-width:600px" src="/CSWNST14/assets/images/sche.png" alt="">
       </section>
     </div>
 
