--- a/program.html
+++ b/program.html
@@ -11,7 +11,7 @@ layout: main
         <header class="major">
           <h2>Tentative Schedule</h2>
         </header>
-        <img width="100%" src="{{ site.baseurl }}/assets/images/sche.png" alt="">
+        <img style="max-width:600px" src="{{ site.baseurl }}/assets/images/sche.png" alt="">
       </section>
     </div>
 
