--- a/hotel.html
+++ b/hotel.html
@@ -10,17 +10,17 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<!--[if lte IE 8]><script src="/CSWNST14/assets/css/ie/html5shiv.js"></script><![endif]-->
-		<script src="/CSWNST14/assets/js/jquery.min.js"></script>
-		<script src="/CSWNST14/assets/js/jquery.dropotron.min.js"></script>
-		<script src="/CSWNST14/assets/js/skel.min.js"></script>
-		<script src="/CSWNST14/assets/js/skel-layers.min.js"></script>
-		<script src="/CSWNST14/assets/js/init.js"></script>
+		<!--[if lte IE 8]><script src="/assets/css/ie/html5shiv.js"></script><![endif]-->
+		<script src="/assets/js/jquery.min.js"></script>
+		<script src="/assets/js/jquery.dropotron.min.js"></script>
+		<script src="/assets/js/skel.min.js"></script>
+		<script src="/assets/js/skel-layers.min.js"></script>
+		<script src="/assets/js/init.js"></script>
 		<noscript>
-			<link rel="stylesheet" href="/CSWNST14/assets/css/skel.css" />
-			<link rel="stylesheet" href="/CSWNST14/assets/css/style.css" />
+			<link rel="stylesheet" href="/assets/css/skel.css" />
+			<link rel="stylesheet" href="/assets/css/style.css" />
 		</noscript>
-		<!--[if lte IE 8]><link rel="stylesheet" href="/CSWNST14/assets/css/ie/v8.css" /><![endif]-->
+		<!--[if lte IE 8]><link rel="stylesheet" href="/assets/css/ie/v8.css" /><![endif]-->
 	</head>
 	<body>
 	<!-- Header -->
@@ -32,14 +32,14 @@
 	<nav id="nav">
 		<ul>
 			
-      <li ><a href="/CSWNST14/index.html">Home</a></li>
-      <li ><a href="/CSWNST14/committees.html">Committees</a></li>
-      <li ><a href="/CSWNST14/program.html">Program</a></li>
-      <li ><a href="/CSWNST14/submission.html">Submission</a></li>
-      <li ><a href="/CSWNST14/registration.html">Registration</a></li>
-      <li ><a href="/CSWNST14/venue.html">Venue</a></li>
-      <li class='current'><a href="/CSWNST14/hotel.html">Hotel</a></li>
-      <li ><a href="/CSWNST14/sponsors.html">Sponsors</a></li>
+      <li ><a href="/index.html">Home</a></li>
+      <li ><a href="/committees.html">Committees</a></li>
+      <li ><a href="/program.html">Program</a></li>
+      <li ><a href="/submission.html">Submission</a></li>
+      <li ><a href="/registration.html">Registration</a></li>
+      <li ><a href="/venue.html">Venue</a></li>
+      <li class='current'><a href="/hotel.html">Hotel</a></li>
+      <li ><a href="/sponsors.html">Sponsors</a></li>
 		</ul>
 	</nav>
 
@@ -55,7 +55,7 @@
         </header>
         <p>It is recommended to choose the hotels around Cotai.
         <h3>Map of Cotai</h3>
-        <img style="max-width:600px;margin-bottom:20px" src="/CSWNST14/assets/images/map_cotai.png" alt="">
+        <img style="max-width:600px;margin-bottom:20px" src="/assets/images/map_cotai.png" alt="">
 
         <h4>A. Galaxy Macau</h4>
         <p><a href="https://www.galaxymacau.com/zh-hant/">https://www.galaxymacau.com/zh-hant/</a>
@@ -102,14 +102,15 @@
 							<div class="8u">
 								<section>
 									<header class="major">
-										<h2>About The CSWNST14 Organizer</h2>
-										<span class="byline">Some introductions about the conference organizer</span>
+										<h2>About CSWNST14</h2>
+                    <span class="byline">Organizer: University of Macau; the Physical Society of Macao</span>
+                    <br/><span class="byline">Co-organizer: the City University of Hong Kong</span>
 									</header>
 								</section>
 							</div>
 							<div class="4u">
 								<section>
-									<header class="major">
+									<header style="padding-bottom:1em" class="major">
 										<h2>Contact Us</h2>
 									</header>
 									<ul class="contact">
@@ -124,8 +125,8 @@
 
 					<!-- Copyright -->
 						<div class="copyright">
-              Copyright @2017 The CSWNST14 Organizer. All rights reserved. 
-							Theme design by <a href="http://cloudcannon.com">Cloud Cannon</a>
+              Copyright @2017 University of Macau; the Physical Society of Macao. All rights reserved. 
+              <br/>Jekyll Theme by <a href="http://cloudcannon.com">Cloud Cannon</a>
 						</div>
 
 				</div>
