--- a/registration.html
+++ b/registration.html
@@ -10,17 +10,17 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<!--[if lte IE 8]><script src="/CSWNST14/assets/css/ie/html5shiv.js"></script><![endif]-->
-		<script src="/CSWNST14/assets/js/jquery.min.js"></script>
-		<script src="/CSWNST14/assets/js/jquery.dropotron.min.js"></script>
-		<script src="/CSWNST14/assets/js/skel.min.js"></script>
-		<script src="/CSWNST14/assets/js/skel-layers.min.js"></script>
-		<script src="/CSWNST14/assets/js/init.js"></script>
+		<!--[if lte IE 8]><script src="./assets/css/ie/html5shiv.js"></script><![endif]-->
+		<script src="./assets/js/jquery.min.js"></script>
+		<script src="./assets/js/jquery.dropotron.min.js"></script>
+		<script src="./assets/js/skel.min.js"></script>
+		<script src="./assets/js/skel-layers.min.js"></script>
+		<script src="./assets/js/init.js"></script>
 		<noscript>
-			<link rel="stylesheet" href="/CSWNST14/assets/css/skel.css" />
-			<link rel="stylesheet" href="/CSWNST14/assets/css/style.css" />
+			<link rel="stylesheet" href="./assets/css/skel.css" />
+			<link rel="stylesheet" href="./assets/css/style.css" />
 		</noscript>
-		<!--[if lte IE 8]><link rel="stylesheet" href="/CSWNST14/assets/css/ie/v8.css" /><![endif]-->
+		<!--[if lte IE 8]><link rel="stylesheet" href="./assets/css/ie/v8.css" /><![endif]-->
 	</head>
 	<body>
 	<!-- Header -->
@@ -32,14 +32,14 @@
 	<nav id="nav">
 		<ul>
 			
-      <li ><a href="/CSWNST14/index.html">Home</a></li>
-      <li ><a href="/CSWNST14/committees.html">Committees</a></li>
-      <li ><a href="/CSWNST14/program.html">Program</a></li>
-      <li ><a href="/CSWNST14/submission.html">Submission</a></li>
-      <li class='current'><a href="/CSWNST14/registration.html">Registration</a></li>
-      <li ><a href="/CSWNST14/venue.html">Venue</a></li>
-      <li ><a href="/CSWNST14/hotel.html">Hotel</a></li>
-      <li ><a href="/CSWNST14/sponsors.html">Sponsors</a></li>
+      <li ><a href="./index.html">Home</a></li>
+      <li ><a href="./committees.html">Committees</a></li>
+      <li ><a href="./program.html">Program</a></li>
+      <li ><a href="./submission.html">Submission</a></li>
+      <li class='current'><a href="./registration.html">Registration</a></li>
+      <li ><a href="./venue.html">Venue</a></li>
+      <li ><a href="./hotel.html">Hotel</a></li>
+      <li ><a href="./sponsors.html">Sponsors</a></li>
 		</ul>
 	</nav>
 
@@ -62,7 +62,7 @@
         <h3>Payment</h3>
         <p>We accept bank transfer to the following bank account:
         <br/>
-        <img style="max-width:600px" src="/CSWNST14/assets/images/payment.png" alt="">
+        <img style="max-width:600px" src="./assets/images/payment.png" alt="">
       </section>
     </div>
 
