--- a/registration.html
+++ b/registration.html
@@ -15,7 +15,7 @@ layout: main
         <p>4000 MOP</p>
 
         <h3>Registration</h3>
-        <p>Please fill in the <a href="javascript:;">registration form</a>.
+        <p>Please fill in the <a href="http://hk.mikecrm.com/ZD8Lm5J" target="_blank">registration form</a>.
 
         <h3>Payment</h3>
         <p>We accept bank transfer to the following bank account:
