--- a/submission.html
+++ b/submission.html
@@ -13,7 +13,7 @@ layout: main
         </header>
         <h3>Abstract Submission</h3>
         <p>Please download the Abstract Template and send it back to <a href="mailto:CSWNST14@umac.mo">CSWNST14@umac.mo</a>
-        <p><a href="{{ site.baseurl }}/assets/download/abstract_template.pdf">Click to download</a>
+        <p><a href="{{ site.baseurl }}/assets/download/abstract_template.docx">Click to download</a>
         <h3>Poster Size</h3>
         <p>The poster size is 120 cm (vertical) by 90 cm (horizental).
       </section>
